FileName truncate fix for schema explorer

--- a/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.scss
@@ -42,6 +42,9 @@ ngx-monaco-editor {
   .file-name {
     flex-grow: 1;
     margin-right: 2rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .version {
     background-color: rgba(0, 0, 0, 0.2);
